@@ -20,3 +20,4 @@ require_relative "simplify/replace_arithmetic_on_ranges"
 require_relative "simplify/wrap_formulae_that_return_arrays_and_are_not_in_arrays"
 require_relative "simplify/replace_string_join_on_ranges"
 require_relative "simplify/emergency_array_formula_replace_indirect_bodge.rb"
+require_relative "simplify/replace_transpose_function"
